--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -20,7 +20,7 @@
 					<p>I Am A Full Stack Web Developer</p>
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">Proceed to second phase</a>
+					<a href="#first" class="button scrolly">Proceed to my skills</a>
 				</footer>
 			</section>
 
@@ -28,9 +28,8 @@
 			<section id="first" class="main">
 				<header>
 					<div class="container">
-						<h2>Tessellate is a free responsive site template</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>My story as a full stack web developer</h2>
+						<p>I am a builder at heart. I was halfway through a Bachelors in Biochemistry at Utah Valley University when I decided </br>that, although I am facinated by how the subatomic world works, I draw more self fulfillment from building things.</br> I derive happiness from building just about anything, and building things in the virtual world definitely is no execption.</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
