added some bio and imgs

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://kit.fontawesome.com/caedcde686.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
@@ -69,8 +70,8 @@
 					<div class="inner">
 						<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h2 class="major">Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+							<h2 class="major">CSS</h2>
+							<p>I can write CSS code.</p>
 							<a href="#" class="special">Learn more</a>
 						</div>
 					</div>
@@ -91,8 +92,8 @@
 	<!-- Four -->
 				<section id="four" class="wrapper alt style1">
 					<div class="inner">
-						<h2 class="major">Vitae phasellus</h2>
-						<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+						<h2 class="major">JavaScript</h2>
+						<p>I used JavaScript to complete the Lambda Challenge.</p>
 						<section class="features">
 							<article>
 								<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
