--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -50,13 +50,13 @@
 				</div>
 			</section>
 
-<!-- Wrapper -->
+<!-- Wrapper: My Skills -->
 			<section id="wrapper">
 
-	<!-- One -->
+	<!-- One: HTML -->
 				<section id="one" class="wrapper spotlight style1">
 					<div class="inner">
-						<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/html-code.jpg" alt="" /></a>
 						<div class="content">
 							<h2 class="major">HTML</h2>
 							<p>I know how to write HTML code with correct syntax.</p>
@@ -65,10 +65,10 @@
 					</div>
 				</section>
 
-	<!-- Two -->
+	<!-- Two: CSS -->
 				<section id="two" class="wrapper alt spotlight style2">
 					<div class="inner">
-						<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/css-code.jpg" alt="" /></a>
 						<div class="content">
 							<h2 class="major">CSS</h2>
 							<p>I can write CSS code.</p>
@@ -77,23 +77,23 @@
 					</div>
 				</section>
 
-	<!-- Three -->
+	<!-- Three: JavaScript -->
 				<section id="three" class="wrapper spotlight style3">
 					<div class="inner">
-						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image"><img src="images/js-code.jpg" alt="" /></a>
 						<div class="content">
-							<h2 class="major">Nullam dignissim</h2>
-							<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+							<h2 class="major">JavaScript</h2>
+							<p>I used JavaScript to complete the Lambda Challenge.</p>
 							<a href="#" class="special">Learn more</a>
 						</div>
 					</div>
 				</section>
 
-	<!-- Four -->
+	<!-- Four: My Builds -->
 				<section id="four" class="wrapper alt style1">
 					<div class="inner">
-						<h2 class="major">JavaScript</h2>
-						<p>I used JavaScript to complete the Lambda Challenge.</p>
+						<h2 class="major">Building</h2>
+						<p>I love building things. Whether in the virtual world of web development or in the real world with physical materials, I draw great fulfillment from building things. </br>Check out some of my projects below!</p>
 						<section class="features">
 							<article>
 								<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
