--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -155,14 +155,18 @@
 					<ul class="contact">
 						<li class="icon solid fa-home">
 							Untitled Inc<br />
-							1234 Somewhere Road Suite #2894<br />
-							Nashville, TN 00000-0000
+							1234 Somewhere Road Suite<br />
+							Some City, UT 00000-0000
 						</li>
 						<li class="icon solid fa-phone">(000) 000-0000</li>
 						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
 						<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 						<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
 						<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+						<li>
+							<i class="fab fa-linkedin"></i>
+							<a href="https://www.linkedin.com/in/tyler-alsop/">linkedin.com/in/tyler-alsop/</a>
+						</li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
