--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -132,7 +132,7 @@
 			<section id="footer">
 				<div class="inner">
 					<h2 class="major">Get in touch</h2>
-					<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+					<p>Either fill out the form below to send me a message or click on one of the links to the side to contact me by the method of your choice.</p>
 					<form method="post" action="#">
 						<div class="fields">
 							<div class="field">
