--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -97,27 +97,27 @@
 						<section class="features">
 							<article>
 								<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-								<h3 class="major">Sed feugiat lorem</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-								<a href="#" class="special">Learn more</a>
+								<h3 class="major">User Interface w/ Flexbox</h3>
+								<p>This is the first project I ever worked on using flexbox. 10/08/19</p>
+								<a href="https://github.com/TylerAlsop/UI-III-Flexbox" class="special">View Project</a>
 							</article>
 							<article>
 								<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-								<h3 class="major">Nisl placerat</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-								<a href="#" class="special">Learn more</a>
+								<h3 class="major">User Interface Sprint Challenge</h3>
+								<p>This is what I did for my very first Sprint Challenge at Lambda School</p>
+								<a href="https://github.com/TylerAlsop/Sprint-Challenge--User-Interface" class="special">View Project</a>
 							</article>
 							<article>
 								<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 								<h3 class="major">Ante fermentum</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-								<a href="#" class="special">Learn more</a>
+								<a href="#" class="special">View Project</a>
 							</article>
 							<article>
 								<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 								<h3 class="major">Fusce consequat</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-								<a href="#" class="special">Learn more</a>
+								<a href="#" class="special">View Project</a>
 							</article>
 						</section>
 						<ul class="actions">
@@ -140,7 +140,7 @@
 								<input type="text" name="name" id="name" />
 							</div>
 							<div class="field">
-								<label for="email">Email</label>
+								<label for="email">E-mail</label>
 								<input type="email" name="email" id="email" />
 							</div>
 							<div class="field">
