--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -96,15 +96,15 @@
 						<p>I love building things. Whether in the virtual world of web development or in the real world with physical materials, I draw great fulfillment from building things. </br>Check out some of my projects below!</p>
 						<section class="features">
 							<article>
-								<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="#" class="image"><img src="images/ui-flexbox.png" alt="" /></a>
 								<h3 class="major">User Interface w/ Flexbox</h3>
 								<p>This is the first project I ever worked on using flexbox. 10/08/19</p>
 								<a href="https://github.com/TylerAlsop/UI-III-Flexbox" class="special">View Project</a>
 							</article>
 							<article>
-								<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="#" class="image"><img src="images/sprint-challeng-1.png" alt="" /></a>
 								<h3 class="major">User Interface Sprint Challenge</h3>
-								<p>This is what I did for my very first Sprint Challenge at Lambda School</p>
+								<p>This is what I did for my very first Sprint Challenge at Lambda School. 10/11/19</p>
 								<a href="https://github.com/TylerAlsop/Sprint-Challenge--User-Interface" class="special">View Project</a>
 							</article>
 							<article>
